--- a/Aboutme.html
+++ b/Aboutme.html
@@ -8,8 +8,12 @@
 <h1>Marie Verlinden</h1>
 <h2 style="color:grey;text-align: right",>"Not really that interesting tbh"- John Green</h2>
     <h3>Algemeen</h3>
+<img src="img_small.jpg" alt="picture of me kneeling">
 <p>Ik ben geboren op 4 februari 2000.</p>
 <p>Momenteel woon ik in Sint-Laureins-Bergem, dichtbij het Kasteel van Gaasbeek.</p>
 <p>Mijn familie bestaat uit mijn vader, mijn stiefmoeder, mijn (adoptie-)zus en mijn stiefzus. Ik heb ook een stiefbroer, maar hij woont bij zijn vader.</p>
+    <h3> Hobbies</h3>
+    Ik heb een paar hobbies, die niet allemaal even alledaags zijn. Zoals:
+    <h4>Doll Repaints</h4>
 </body>
 </html>
