--- a/Logboek.html
+++ b/Logboek.html
@@ -2,3 +2,4 @@ Week 1: op zoek naar klant
 Week 2: Klant is het youtube kanaal SerpentGameplay, toestemming van Rick Broers (beheerder van het youtubekanaal)
 Week 3: Gevraagd om het interview te kunnen doen, vragenlijst moet nog opgesteld worden
 Week 4: Nog geen vorderingen   
+Week 5: Vragen zijn opgestuurd, nog geen antwoord
