--- a/Aboutme.html
+++ b/Aboutme.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>About me</title>
-</head>
-<body style=font-family:sans-serif>
+<html lang="nl">
 
-<h1>Marie Verlinden</h1>
-<h2 style="color:grey;text-align: right",>"Not really that interesting tbh"- John Green</h2>
+<head>
+    <title>About me</title>
+</head>
+
+<body style="font-family:sans-serif">
+
+    <h1>Marie Verlinden</h1>
+    <h6 style="color:grey;text-align: right">"Not really that interesting tbh"- John Green</h6>
     <h3>Algemeen</h3>
-<img src="img_small.jpg" alt="picture of me kneeling">
-<p>Ik ben geboren op 4 februari 2000.</p>
-<p>Momenteel woon ik in Sint-Laureins-Bergem, dichtbij het Kasteel van Gaasbeek.</p>
-<p>Mijn familie bestaat uit mijn vader, mijn stiefmoeder, mijn (adoptie-)zus en mijn stiefzus. Ik heb ook een stiefbroer, maar hij woont bij zijn vader.</p>
+
+    <p>Ik ben geboren op 4 februari 2000.</p>
+    <p>Momenteel woon ik in Sint-Laureins-Bergem, dichtbij het Kasteel van Gaasbeek.</p>
+    <p>Mijn familie bestaat uit mijn vader, mijn stiefmoeder, mijn (adoptie-)zus en mijn stiefzus. Ik heb ook een stiefbroer, maar hij woont bij zijn vader.</p>
     <h3> Hobbies</h3>
     Ik heb een paar hobbies, die niet allemaal even alledaags zijn. Zoals:
     <h4>Doll Repaints</h4>
+
+    <a href="https://www.youtube.com/watch?v=jUyq8Ex4f0o">De nieuwste video van mijn favoriete youtuber die echt prachtige doll repaints maakt</a>
+    <p> De video is gemaakt door de persoon die me interese heeft gegeven in deze hobby. Ik ben zelf lang niet zo goed als haar.
+        Doll repaints houdt eigenlijk in dat je een (oude) poppen neemt en alles weghaalt, om dan je eigen pop te costumizen. Het is niet echt de meest goedkope en makkrlijke hobby, maar ik vind het echt leuk om te doen.</p>
+    <h4>Borduren</h4>
+    <h3></h3>
 </body>
+
 </html>
