--- a/TaakKlantSerpentgameplay.html
+++ b/TaakKlantSerpentgameplay.html
@@ -1,16 +1,58 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
+
 <head>
-<title>Serpentgameplay Site</title>
-    </head> 
-    <body style="font-family:helvetica,sans-serif">
+
+    <title>Serpentgameplay Site</title>
+    <style>
+        body {
+            background-color: rebeccapurple;
+        }
+
+        ul {
+            font-family: sans-serif;
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: #b40bc1;
+        }
+
+        li {
+            float: left;
+        }
+
+        li a {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 16px;
+            text-decoration: none;
+        }
+
+        li a:hover {
+            background-color: #5a0660;
+        }
+
+    </style>
+</head>
+
+<body style="font-family:helvetica,sans-serif">
     <h1>Welkom op de Serpentgameplay Website</h1>
-        <h2>Biografie</h2>
-        <p>Rick is geboren op 8 augustus 1995.</p>
-        <p>Het Serpentgameplay youtubekanaal bestaat sinds 5 oktober 2011</p>
-        <h2>Series</h2>
-        <p>Sinds de start in 2011 zijn er enorm wat youtubeseries voorbijgekomen.</p>
-        <h2>Quotes</h2>
-        <h2>Merch</h2>
-    </body>
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#OverSGP">Over Serpentgameplay</a></li>
+            <li><a href="#OverRick">Over Rick</a></li>
+            <li><a href="https://shop.spreadshirt.nl/serpentgameplay/">Merch</a></li>
+            <li><a href="https://www.youtube.com/channel/UCy26hVJ5r5-WaHo1bYlBr2A">Youtube</a></li>
+            <li><a href="#SocialMedia">Andere Social Media</a> </li>
+
+        </ul>
+    </nav>
+<h2>Over Serpentgameplay</h2>
+<h2>Over Rick</h2>
+<h2>Social Media</h2>
+</body>
+
 </html>
