--- a/Serpentgameplay/Serpentgameplay/Taak_SGPsite.html
+++ b/Serpentgameplay/Serpentgameplay/Taak_SGPsite.html
@@ -14,13 +14,12 @@
 
     <nav>
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#OverSGP">Over Serpentgameplay</a></li>
-            <li><a href="#OverRick">Over Rick</a></li>
+            <li><a href="Taak_SGPsite.html">Home</a></li>
+            <li><a href="About.html">Over Serpentgameplay</a></li>
             <li><a href="#Series">Series</a></li>
             <li><a href="https://shop.spreadshirt.nl/serpentgameplay/">Merch</a></li>
             <li><a href="https://www.youtube.com/channel/UCy26hVJ5r5-WaHo1bYlBr2A">Youtube</a></li>
-            <li><a href="#SocialMedia">Andere Social Media</a> </li>
+            <li><a href="Social_Media.html">Andere Social Media</a> </li>
 
         </ul>
     </nav>
