--- a/Serpentgameplay/About.html
+++ b/Serpentgameplay/About.html
@@ -4,66 +4,22 @@
 <head>
 
     <title>Serpentgameplay Site</title>
-    <style>
-        body {
-            background-color: rebeccapurple;
-            font-family: sans-serif;
-        }
-
-        ul {
-            font-family: sans-serif;
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            background-color: mediumpurple;
-        }
-
-        li {
-            float: left;
-        }
-
-        li a {
-            display: block;
-            color: black;
-            text-align: center;
-            padding: 16px;
-            text-decoration: none;
-        }
-
-        li a:hover {
-            background-color: lightgoldenrodyellow;
-            color: black
-        }
-
-        img {
-            display: block;
-            margin-right: auto;
-            margin-left: auto;
-            
-        }
-
-        footer {
-            font-size: 75%
-        }
-
-    </style>
-
+    <link href="StyleSheet.css" rel="stylesheet" type="text/css">
+    <!-- bron:https://www.webucator.com/how-to/how-create-css-external-style-sheet.cfm-->
 </head>
 
 <body>
-    <img src="Serpent_titel.PNG" alt="SerpentGameplay title" class="center">
+
     <h1 style="text-align: center">Welkom op de Serpentgameplay Website</h1>
 
     <nav>
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#OverSGP">Over Serpentgameplay</a></li>
-            <li><a href="#OverRick">Over Rick</a></li>
+            <li><a href="Taak_SGPsite.html">Home</a></li>
+            <li><a href="About.html">Over Serpentgameplay</a></li>
             <li><a href="#Series">Series</a></li>
             <li><a href="https://shop.spreadshirt.nl/serpentgameplay/">Merch</a></li>
             <li><a href="https://www.youtube.com/channel/UCy26hVJ5r5-WaHo1bYlBr2A">Youtube</a></li>
-            <li><a href="#SocialMedia">Andere Social Media</a> </li>
+            <li><a href="Social_Media.html">Andere Social Media</a> </li>
 
         </ul>
     </nav>
