--- a/Serpentgameplay/Social_Media.html
+++ b/Serpentgameplay/Social_Media.html
@@ -23,7 +23,12 @@
 
         </ul>
     </nav>
-    <img src="Serpent_titel.PNG" alt="SerpentGameplay title" class="center">
+
+    <h2>Social Media</h2>
+    <p> <a href="https://www.facebook.com/NietRickBroers/">Facebook</a> </p>
+    <p> <a href="https://twitter.com/NietRickBroers">Twitter</a> </p>
+    <p> <a href="https://www.instagram.com/welrickbroers/">Instagram</a> </p>
+    <p> <a href="https://discord.gg/CatCmFR">Discord</a> </p>
 
     <footer>
 
